footer Disclaimer text and Privacy Policy text add spacebetween

--- a/index.html
+++ b/index.html
@@ -193,9 +193,13 @@
                         <div class="footer-text">© 2025 SCS Tech</div>
                     </div>
                    <div class="col-md-6 col-lg-6 mb-2 mb-md-0">
-                        <div class="footer-text text-end">
-                          <span class="space">Disclaimer</span>
-                          <span>Privacy Policy</span>
+                        <div class="footer-text">
+                          <div style="display: flex; gap:45px; justify-content: end;">
+                            <li>Disclaimer</li>
+                          <li>Privacy Policy</li>
+                          </div>
+                          <!-- <span class="space">Disclaimer</span>
+                          <span>&nbsp; &nbsp; Privacy Policy</span> -->
                         </div>
                       </div>
                     </div>
